# miniCooker

./: CMakeLists.txt  README.md  dummy.sh  menu.sh
cmake/modules/: FindLZMA.cmake  FindLZMA.cmake~  FindPostgreSQL.cmake  FindROOT.cmake  FindXERCES.cmake  FindXQILLA.cmake
include/: InitReader.h  Plugin.h  RecipeReader.h  chef.h  csitree.h
recipe/CsI/: test.xml
src/: CMakeLists.txt
src/Chef/: CMakeLists.txt
src/Chef/src/: chef.cpp
src/InitReader/: CMakeLists.txt
src/InitReader/src/: InitReader.cpp
src/Plugin/: CMakeLists.txt
src/Plugin/src/: Plugin.cpp
src/Reconstruction/TreeSearch/: CMakeLists.txt
src/SlowCtrl/: CMakeLists.txt
src/SlowCtrl/src/: slowctrl.cpp
src/combine/: CMakeLists.txt
src/cooker/: CMakeLists.txt
src/cooker/src/: cooker.cpp
src/gdml/gdml_files/schema/: gdml_olympus.xsd
src/plugins/MCgenerators/born/: CMakeLists.txt
src/plugins/MCgenerators/fixed/: CMakeLists.txt
src/plugins/MCgenerators/isotropic/: CMakeLists.txt
src/plugins/analysis/: CMakeLists.txt
src/plugins/analysis/SlowCtrlDemo/: CMakeLists.txt
src/plugins/analysis/covfefe/: CMakeLists.txt
src/plugins/analysis/covfefe/src/: covfefe.cpp
src/plugins/analysis/stt_analysis/: CMakeLists.txt
src/plugins/detector/: CMakeLists.txt
src/plugins/detector/CsI/: CMakeLists.txt
src/plugins/example/: CMakeLists.in
src/plugins/tools/Copy/: CMakeLists.txt
src/plugins/tools/Macro/: CMakeLists.txt
src/plugins/visualization/EventDisplay/: CMakeLists.txt
src/plugins/visualization/EventDisplay/src/: Det_EventDisplay.cpp
src/plugins/visualization/EventDisplay/src/include/: Det_EventDisplay.h
src/tree/: CMakeLists.txt
src/tree/src/include/: LinkDef.hh
src/visualcooker/: CMakeLists.txt
