CMAKE_MINIMUM_REQUIRED(VERSION 2.4.3 FATAL_ERROR)

#add_subdirectory(LumiGEM)
#add_subdirectory(adctdc)
#add_subdirectory(trb3)
#add_subdirectory(scaler)
#add_subdirectory(GEMtng)
#add_subdirectory(STT)
#add_subdirectory(SPS)
#add_subdirectory(PbGlass)
#add_subdirectory(SlowCtrl)
add_subdirectory(CsI)

#add_subdirectory(SiPM)

#add_subdirectory(strawtube)

#add_subdirectory(Trigger)
